--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
     "@angular/router": "6.0.1",
     "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
+    "crypto-js": "^3.1.9-1",
     "ngx-bootstrap": "^2.0.5",
     "rxjs": "^6.1.0",
     "semantic-ui": "^2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.1",
     "@angular/cli": "6.0.1",
     "@angular/compiler-cli": "6.0.1",
     "@angular/language-service": "6.0.1",
+    "@types/crypto-js": "^3.1.39",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -46,7 +49,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "2.7.2",
-    "@angular-devkit/build-angular": "~0.6.1"
+    "typescript": "2.7.2"
   }
 }
